tests/error/loop_not_int.gw
// [contains] conditional must be of type
complex c;
repeat(c)
	<<< "error" >>>;
